// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
  >
    <span
      class="c-u4cme3 soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="clb0omk soui-tag-tag cl7dyho soui-tag-info c-awse3c soui-tag-bright"
  >
    <span
      class="c-u4cme3 soui-tag-wrapper"
    >
      Info
    </span>
  </div>
  <div
    class="clb0omk soui-tag-tag c-a7ygj3 soui-tag-danger c-awse3c soui-tag-bright"
  >
    <span
      class="c-u4cme3 soui-tag-wrapper"
    >
      Danger
    </span>
  </div>
  <div
    class="clb0omk soui-tag-tag cx4ay0e soui-tag-warning c-awse3c soui-tag-bright"
  >
    <span
      class="c-u4cme3 soui-tag-wrapper"
    >
      Warning
    </span>
  </div>
  <div
    class="clb0omk soui-tag-tag c-gctrl7 soui-tag-success c-awse3c soui-tag-bright"
  >
    <span
      class="c-u4cme3 soui-tag-wrapper"
    >
      Success
    </span>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="clb0omk soui-tag-tag cxn0dxb soui-tag-tangerine c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cs8cu63 soui-tag-magenta c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-48cd5i soui-tag-purple c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-7nrd6o soui-tag-indigo c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cl7aclt soui-tag-cyan c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cl7gyys soui-tag-neon c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag ci4hzlx soui-tag-lemon c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag chz8e6g soui-tag-brown c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="clb0omk soui-tag-tag cxn0dxb soui-tag-tangerine cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cs8cu63 soui-tag-magenta cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-48cd5i soui-tag-purple cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-7nrd6o soui-tag-indigo cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cl7aclt soui-tag-cyan cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cl7gyys soui-tag-neon cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag ci4hzlx soui-tag-lemon cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag chz8e6g soui-tag-brown cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="clb0omk soui-tag-tag cxn0dxb soui-tag-tangerine c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cs8cu63 soui-tag-magenta c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-48cd5i soui-tag-purple c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-7nrd6o soui-tag-indigo c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cl7aclt soui-tag-cyan c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cl7gyys soui-tag-neon c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag ci4hzlx soui-tag-lemon c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag chz8e6g soui-tag-brown c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="clb0omk soui-tag-tag cxn0dxb soui-tag-tangerine c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cs8cu63 soui-tag-magenta c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-48cd5i soui-tag-purple c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-7nrd6o soui-tag-indigo c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cl7aclt soui-tag-cyan c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cl7gyys soui-tag-neon c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag ci4hzlx soui-tag-lemon c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag chz8e6g soui-tag-brown c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cl7dyho soui-tag-info c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-a7ygj3 soui-tag-danger c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cx4ay0e soui-tag-warning c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-gctrl7 soui-tag-success c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cl7dyho soui-tag-info cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-a7ygj3 soui-tag-danger cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cx4ay0e soui-tag-warning cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-gctrl7 soui-tag-success cl7bxyp soui-tag-fill"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cl7dyho soui-tag-info c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-a7ygj3 soui-tag-danger c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cx4ay0e soui-tag-warning c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-gctrl7 soui-tag-success c-3rsip8 soui-tag-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cl7dyho soui-tag-info c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-a7ygj3 soui-tag-danger c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag cx4ay0e soui-tag-warning c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-gctrl7 soui-tag-success c-3ae6iu soui-tag-bright-outline"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="clb0omk soui-tag-tag ci8heop soui-tag-small c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Small
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="clb0omk soui-tag-tag ci4fj65 soui-tag-large c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        Large
      </span>
    </div>
  </div>
  <div>
    <div
      class="clb0omk soui-tag-tag ci8heop soui-tag-small c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
    >
      <div
        class="c-u4cme3 soui-tag-wrapper"
      >
        <span
          class="cs0exw3 soui-tag-container"
        >
          Small
        </span>
      </div>
      <div
        class="cqtmrdv soui-tag-close-icon"
      >
        <span
          class="c-jm1d00 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
    >
      <div
        class="c-u4cme3 soui-tag-wrapper"
      >
        <span
          class="cs0exw3 soui-tag-container"
        >
          Default
        </span>
      </div>
      <div
        class="cqtmrdv soui-tag-close-icon"
      >
        <span
          class="c-jm1d00 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="clb0omk soui-tag-tag ci4fj65 soui-tag-large c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
    >
      <div
        class="c-u4cme3 soui-tag-wrapper"
      >
        <span
          class="cs0exw3 soui-tag-container"
        >
          Large
        </span>
      </div>
      <div
        class="cqtmrdv soui-tag-close-icon"
      >
        <span
          class="c-jm1d00 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
    >
      <div
        class="c-u4cme3 soui-tag-wrapper"
      >
        <span
          class="cs0exw3 soui-tag-container"
        >
          Tag 1
        </span>
      </div>
      <div
        class="cqtmrdv soui-tag-close-icon"
      >
        <span
          class="c-jm1d00 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
    >
      <div
        class="c-u4cme3 soui-tag-wrapper"
      >
        <span
          class="cs0exw3 soui-tag-container"
        >
          Tag 2
        </span>
      </div>
      <div
        class="cqtmrdv soui-tag-close-icon"
      >
        <span
          class="c-jm1d00 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright csilwh6 soui-tag-disabled"
    >
      <div
        class="c-u4cme3 soui-tag-wrapper"
      >
        <span
          class="cs0exw3 soui-tag-container"
        >
          Tag 3
        </span>
      </div>
      <div
        class="cqtmrdv soui-tag-close-icon"
      >
        <span
          class="c-jm1d00 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default c-3rsip8 soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <span
        class="c-u4cme3 soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-inline-end: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
  >
    <div
      class="c-u4cme3 soui-tag-wrapper"
    >
      <span
        class="cs0exw3 soui-tag-container"
      >
        Abc
      </span>
    </div>
    <div
      class="cqtmrdv soui-tag-close-icon"
    >
      <span
        class="c-jm1d00 soui-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="clb0omk soui-tag-tag c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
  >
    <span
      class="c-u4cme3 soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="clb0omk soui-tag-tag c-xlehq9 soui-tag-rounded c-uyjdt9 soui-tag-default c-awse3c soui-tag-bright"
  >
    <span
      class="c-u4cme3 soui-tag-wrapper"
    >
      Rounded
    </span>
  </div>
</div>
`;
